pkg/gen/examples/invalid/noninteger/enum.go
package noninteger

//go:enumer
type NonInteger float32

const (
	NonIntegerA NonInteger = iota
	NonIntegerB
)
